# AIEDFPipeline

./: .gitignore  BOTTLENECKS.md  CONTENTION_ANALYSIS.md  Cargo.toml  HOT_PATH_ANALYSIS.md  LICENSE  P50_ANALYSIS.md  PACKET_DROP_ANALYSIS.md  PIPELINE_ARCHITECTURE.md  PRIORITY_INVERSION.md  README.md  SCHEDULING_OVERHEAD_ANALYSIS.md  SINGLE_CPU_EDF_LOCK_ANALYSIS.md  SINGLE_CPU_EDF_SLOW_PATHS.md  SLOW_PATHS_ANALYSIS.md  benchmark_report.md  deny.toml  stress_results.csv
benches/: scheduler_bench.rs
docs/: ADAPTIVE_LOAD_BALANCING.md  BOTTLENECKS.md  HOT_PATH_ANALYSIS.md  PACKET_DROP_ANALYSIS.md  PIPELINE_ARCHITECTURE.md  PRIORITY_INVERSION.md  README.md  SCHEDULER_ALGORITHMS.md
examples/: README.md  receive_packets.sh  send_packets.sh  stress_test.rs  test_client.rs
src/: buffer_pool.rs  drr_scheduler.rs  edf_scheduler.rs  egress_drr.rs  gedf_scheduler.rs  gedf_vd_scheduler.rs  gui.rs  ingress_drr.rs  lib.rs  main.rs  metrics.rs  multi_worker_edf.rs  packet.rs  pipeline.rs  priority.rs  queue.rs  threading.rs
src/scheduler/: cedf.rs  edf.rs  egress_drr.rs  gedf.rs  gedf_vd.rs  ingress_drr.rs  mc_edf_elastic.rs  mod.rs  multi_worker_edf.rs  single_cpu_edf.rs
tests/: integration_test.rs  pipeline_integration_test.rs  pipeline_tests.rs  stress_test_integration.rs
