[package]
name = "aiedf-pipeline"
version = "0.1.0"
edition = "2021"
default-run = "aiedf-pipeline"

[[bin]]
name = "gui"
path = "src/bin/gui.rs"

[dependencies]
tokio = { version = "1.35", features = ["rt", "rt-multi-thread", "net", "time", "sync", "io-util", "macros"] }
crossbeam-channel = "0.5"
parking_lot = "0.12"
egui = "0.24"
eframe = "0.24"
egui_plot = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
instant = "0.1"
libc = "0.2"
num_cpus = "1.16"
ctrlc = "3.4"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "scheduler_bench"
harness = false

[[example]]
name = "stress_test"
path = "examples/stress_test.rs"

