[package]
name = "aiedf-pipeline"
version = "0.1.0"
edition = "2021"
default-run = "aiedf-pipeline"

[[bin]]
name = "gui"
path = "src/bin/gui.rs"

[dependencies]
tokio = { version = "1.35", features = ["rt", "rt-multi-thread", "net", "time", "sync", "io-util", "macros"] }
crossbeam-channel = "0.5"
parking_lot = "0.12"
egui = { version = "0.33", default-features = false, features = ["default_fonts"] }
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow"] }
egui_extras = { version = "0.33", default-features = false}
serde = { version = "1.0", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
instant = "0.1"
libc = "0.2"
num_cpus = "1.16"
ctrlc = "3.5"
egui_plot = "0.34.0"

[dev-dependencies]
criterion = "0.7"

[[bench]]
name = "scheduler_bench"
harness = false

[[example]]
name = "stress_test"
path = "examples/stress_test.rs"

